@@ -24,6 +24,7 @@
 * Add support to control cache headers on web repsonses for specific resources via module code
 * Increase defaults for REST request rate limit since DoS and QoS filters will handle this 
 * Add support for JSON configuration to export and import dates as ISO 8601 format 
+* Fix bug in Serial Port Manager that added a new high priority thread every time the serial ports were refreshed
 
 *Version 3.6.4*
 * Revert data source management permission to only allow creating new data sources, not give access to all data sources
